--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <li>Radius to search (max 25 miles, default 10 miles)</li>
             <li>Restaurants that are currently open (unchecked means all restaurants)</li>
         </ul>
-        <!-- localhost: http://127.0.0.1:8080/api/v1/recommendations Heroku: https://benjamin-catarevas-yelp.herokuapp.com/-->
-        <form id="form" action="https://benjamin-catarevas-yelp.herokuapp.com/api/v1/recommendations?" method="post">
+        <!-- localhost: http://127.0.0.1:8080/api/v1/recommendations Heroku: https://benjamin-catarevas-yelp.herokuapp.com//api/v1/recommendations-->
+        <form id="form" action="https://benjamin-catarevas-yelp.herokuapp.com//api/v1/recommendations" method="post">
             <label for="food">Type of food:</label>
             <input type="text" class="input" name="food" id="food" />
             <br>
