--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </head>
 
     <body>
-        <h1>Yelp Restaurant Selector</h1>
-        <p>This is a program that gives users a chance to choose restaurants based on certain preferences.</p>
+        <h1>Yelp Store Selector</h1>
+        <p>This is a program that gives users a chance to choose stores or restaurants based on certain preferences.</p>
         <h3>The following choices available:</h3>
         <ul class="parameters">
             <li>Store type (Mexican, Chinese, thrift shop, etc.)</li>
