--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <li>Radius to search (max 25 miles, default 10 miles)</li>
             <li>Restaurants that are currently open (unchecked means all restaurants)</li>
         </ul>
-        <form id="form" action="https://benjamin-catarevas-yelp.herokuapp.com/api/v1/recommendations">
+        <!-- localhost: http://127.0.0.1:8080/api/v1/recommendations Heroku: https://benjamin-catarevas-yelp.herokuapp.com/api/v1/recommendations-->
+        <form id="form" action="https://benjamin-catarevas-yelp.herokuapp.com/api/v1/recommendations" method="post">
             <label for="store">Type of store:</label>
             <input type="text" class="input" name="store" id="store" />
             <br>
