--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>Yelp Store Selector</h1>
+        <h1>Yelp Store Locator</h1>
         <p>This is a program that gives users a chance to choose stores or restaurants based on certain preferences.</p>
         <h3>The following choices available:</h3>
         <ul class="parameters">
