Changed instructions to reflect restaurant->store change

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li>Number of results (max 50, default 10)</li>
             <li>Location (town, state) - Required</li>
             <li>Radius to search (max 25 miles, default 10 miles)</li>
-            <li>Restaurants that are currently open (unchecked means all restaurants)</li>
+            <li>Stores that are currently open (unchecked means all stores)</li>
         </ul>
         <!-- localhost: http://127.0.0.1:8080/api/v1/recommendations Heroku: https://benjamin-catarevas-yelp.herokuapp.com/api/v1/recommendations-->
         <form id="form" action="https://benjamin-catarevas-yelp.herokuapp.com/api/v1/recommendations" method="post">
