--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <body>
         <h1>Yelp Store Locator</h1>
         <p>This is a program that gives users a chance to choose stores or restaurants based on certain preferences.</p>
+        <p>Note: The first request might require a reload of the website due to waking up the server to process the request.</p>
         <h3>The following choices available:</h3>
         <ul class="parameters">
             <li>Store type (Mexican, Chinese, thrift shop, etc.)</li>
